# eDEX-Rebooted

./: .cursorignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVERSION_BOARD.md  CONVERSION_WORKFLOW.md  GEMINI.md  MIGRATION_INTAKE.md  NATIVE_PORT.md  README.md  ULTRAPLAN.md  Ultrareview.md  codex-findings.md  memory.md  package-lock.json  package.json
.claude/skills/avalonia12-macos-zafiro/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql-analysis.yml  native-ci.yml
assets/kb_layouts/: en-WORKMAN.json
assets/misc/: file-icons-match.json
crates/edex-core/: AGENTS.md  Cargo.toml
crates/edex-core/src/: fs.rs  lib.rs  pty.rs  settings.rs  sysinfo.rs
crates/edex-core/tests/: telemetry_perf.rs
crates/edex-ffi/: AGENTS.md  Cargo.toml
crates/edex-ffi/benches/: uniffi_callback_throughput.rs
crates/edex-ffi/src/: lib.rs
docs/benchmarks/: telemetry-perf-2026-06-09.md
docs/native-migration/: clock.spec.md  cpuinfo.spec.md  hardwareInspector.spec.md  ramwatcher.spec.md  sysinfo.spec.md  toplist.spec.md
docs/plans/: QoL-improvements.md  Ultraplan.md  anti-churn-strategem-2026-06-09.md  ffi-throughput-decision-2026-05-30.md  full-native-swift-rust-conversion-2026-05-30.md  phase-9-terminal-strategy-2026-06-08.md
docs/reviews/: full-native-conversion-plan-critique-2026-05-30.md
docs/superpowers/plans/: 2026-05-22-slice-1-panels-prep.md  2026-05-29-native-panel-slots-phase0-1.md  2026-05-29-native-panel-slots-phase2-cpu-ram.md  2026-06-08-phase-8-2-keyboard-view.md  2026-06-10-panel-collision-managed-layout.md  2026-06-10-panel-followup-audio-config-layout.md
docs/superpowers/specs/: 2026-05-22-slice-1-panels-prep-design.md  2026-05-23-slice-1b-native-mount-design.md  2026-05-29-native-panel-conversion-design.md  2026-06-08-phase-8-3-keyboard-input-routing-design.md  2026-06-10-panel-collision-managed-layout-design.md
docs/validation/: phase-9.7-terminal-burnin-2026-06-09.md
macos/eDEXNative/: AGENTS.md  Package.resolved  Package.swift  README.md
macos/eDEXNative/Scripts/: build-shaders.sh  build_and_run.sh  package_app.sh
macos/eDEXNative/Sources/App/: eDEXNativeApp.swift
macos/eDEXNative/Sources/AudioSupport/: AudioSupport.swift
macos/eDEXNative/Sources/BootSupport/: BootSupport.swift
macos/eDEXNative/Sources/BorderSupport/: BorderSupport.swift
macos/eDEXNative/Sources/ClockSupport/: ClockSupport.swift
macos/eDEXNative/Sources/CpuinfoSupport/: CpuinfoSupport.swift
macos/eDEXNative/Sources/EdexDomainSupport/: EdexBundledAssets.swift
macos/eDEXNative/Sources/FilesystemSupport/: FilesystemSupport.swift
macos/eDEXNative/Sources/FuzzyFinderSupport/: FuzzyFinderSupport.swift
macos/eDEXNative/Sources/HardwareSupport/: HardwareSupport.swift
macos/eDEXNative/Sources/KeyboardSupport/: KeyboardSupport.swift
macos/eDEXNative/Tests/: AugmentedBorderTests.swift  BrightnessProfileTests.swift  DisplayHeadroomTests.swift  EdexLayoutTests.swift  KeyboardDescriptorIndexTests.swift  NativeActionRoutingTests.swift  NativeAudioTests.swift  NativeBootTests.swift  NativeClockTests.swift  NativeCpuinfoTests.swift  NativeFileIconTests.swift  NativeFilesystemTests.swift  NativeFuzzyFinderTests.swift  NativeHardwareTests.swift  NativeKeyboardInputTests.swift  NativeKeyboardTests.swift  NativeKeyboardViewTests.swift  NativeMediaViewerTests.swift  NativeModalTests.swift  NativeRamwatcherTests.swift  NativeSettingsEditorTests.swift  NativeShortcutsTests.swift  NativeStdoutCueGateTests.swift  NativeSysinfoTests.swift  NativeTerminalCwdFollowTests.swift  NativeTerminalTabTests.swift  NativeTerminalTests.swift  NativeTextEditorTests.swift  NativeThemeTests.swift  NativeToplistTests.swift  NativeWebViewRetirementGateTests.swift  SettingsBrightnessTests.swift  TerminalAestheticGoldenTests.swift  TerminalAestheticMetricsTests.swift  TerminalAestheticUniformsTests.swift  TonemapTests.swift
scripts/: native-phase  test-native-phase.sh
src/: package.json  renderer.js  ui.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_cmds.rs  lib.rs  main.rs  native_modal.rs  native_mount.rs  native_panels.rs  pty.rs  settings.rs  sysinfo_cmds.rs  sysinfo_service.rs  window_chrome.rs
src-tauri/tests/: sysinfo_contract.rs
src/assets/css/: main.css  main_shell.css  mod_column.css
src/bridge/: audio.js  bridge.test.js  events.js  native_mount.js  native_mount.test.js  native_panels.js  native_panels.test.js  state.js  sysinfo.js
src/classes/: audiofx.class.js  clock.class.js  cpuinfo.class.js  filesystem.class.js  fuzzyFinder.class.js  hardwareInspector.class.js  keyboard.class.js  mediaPlayer.class.js  modal.class.js  ramwatcher.class.js  sysinfo.class.js  terminal.class.js  terminalTabs.class.js  terminalTabs.class.test.js  toplist.class.js
(+75 files in other folders)
