[package]
name = "edex-ui"
version = "3.0.0"
description = "eDEX-UI sci-fi interface (Tauri/Rust port)"
authors = ["theelderemo"]
edition = "2021"

[lib]
name = "edex_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

portable-pty = "0.8"
sysinfo = "0.32"
battery = "0.7"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "5"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
