[package]
name = "edex-ui"
version = "3.0.0"
description = "eDEX-UI sci-fi interface (Tauri/Rust port)"
authors = ["theelderemo"]
edition = "2021"

[lib]
name = "edex_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

portable-pty = "0.8"
sysinfo = "0.32"
battery = "0.7"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libproc = "0.14"
libc = "0.2"
once_cell = "1"
include_dir = "0.7"
which = "6"

# Slice 1b — AppKit interop for the native panel mount.
# objc 0.2 + cocoa 0.26 + core-graphics chosen because the same stack is
# pulled transitively by Tauri 2 (via tao/wry), so no extra crates are
# added to the binary, and the AppKit API surface used here is the
# well-trodden NSView / NSWindow / CALayer / CATextLayer subset.
# Direct deps (not target-gated) — the project's only target is
# aarch64-apple-darwin per CLAUDE.md; gating buys nothing.
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
core-foundation = "0.10"
dispatch = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[lints.rust]
# objc 0.2's `sel_impl!` macro expands to `cfg(feature = "cargo-clippy")`,
# a deprecated cfg form that newer rustc flags via `unexpected_cfgs`. The
# macro is correct for its version; suppress crate-wide rather than
# pinning a different objc (which would cascade into cocoa/core-graphics).
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
