[package]
name = "edex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.8"
sysinfo = "0.32"
battery = "0.7"
tokio = { version = "1", features = ["fs", "rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libproc = "0.14"
libc = "0.2"
include_dir = "0.7"
which = "6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
