[package]
name = "edex-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "edex_ffi"

[dependencies]
edex-core = { path = "../edex-core" }
uniffi = { version = "0.31.1", features = ["cli"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bench]]
name = "uniffi_callback_throughput"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
