[package]
name = "edex-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "edex_ffi"

[dependencies]
edex-core = { path = "../edex-core" }
uniffi = { version = "0.31.1", features = ["cli"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bench]]
name = "uniffi_callback_throughput"
harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

# macOS-27 dyld requires LC_SYMTAB.stroff (the __LINKEDIT string pool) to be
# 8-byte aligned, or it refuses to dlopen the cdylib ("mis-aligned LINKEDIT
# string pool"). Cargo's default release build strips the cdylib in a way that
# lands stroff at offset%8==4; forcing strip="none" shifts the string pool onto
# the 8-byte boundary dyld accepts. Verified: default -> mod8=4 (dlopen FAIL),
# strip="none" -> mod8=0 (dlopen OK) on macOS 27.0. A CI check asserts the
# alignment holds for every shipped Mach-O so future drift fails loudly.
[profile.release]
strip = "none"
